save code forgotten

--- a/HKO.API/appsettings.json
+++ b/HKO.API/appsettings.json
@@ -4,9 +4,20 @@
       "Default": "Information",
       "Override": {
         "Microsoft": "Warning",
-        "Microsoft.Hosting.Lifetime":  "Information"
+        "Microsoft.Hosting.Lifetime": "Information"
       }
     }
   },
+  "WriteTo": {
+    "Name": "File",
+    "Args": {
+      "path": ""
+    }
+  },
+
+
+
+
+
   "AllowedHosts": "*"
 }
