Add Serilog config

--- a/HKO.API/appsettings.json
+++ b/HKO.API/appsettings.json
@@ -1,23 +1,28 @@
 {
-  "SeriLog": {
-    "MinimunLevel": {
+  "ConnectionStrings": {
+    "DsapoDatabaseConnection": "Server=CUSSV0647APP01.zh.if.atcsg.net;Database=dsapo_database; Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
       "Override": {
         "Microsoft": "Warning",
         "Microsoft.Hosting.Lifetime": "Information"
       }
-    }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "./logs/log-.txt",
+          "rollingInterval": "Day"
+        }
+      },
+      {
+        "Name": "Seq",
+        "Args": { "serverUrl": "http://localhost:5341" }
+      }
+    ]
   },
-  "WriteTo": {
-    "Name": "File",
-    "Args": {
-      "path": ""
-    }
-  },
-
-
-
-
-
   "AllowedHosts": "*"
 }
